<resources>
    <string name="app_name">SnnapBoard AR</string>

    <string name="hello_world">Hello World</string>
    <string name="password_is_not_valid">Password is not valid.</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="duis_lacinia">Duis lacinia mauris felis, sit amet iaculis dolor semper a. Suspendisse potenti. Sed dignissim augue lorem, id tempus urna vulputate in. Donec sed vestibulum ex. Praesent vel luctus arcu. Vestibulum nec augue mi. Quisque in eros augue. Praesent placerat orci faucibus enim imperdiet, tincidunt</string>
    <string name="add_text">Add Text</string>
    <string name="add_image">Add Image</string>
    <string name="write_node_text">Write Node Text</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_required">Permissions Required</string>
    <string name="permission_goto">GOTO SETTINGS</string>
    <string name="permission_msg">Needs all permissions to work properly. Grant them in settings. And try again.</string>
    <string name="required_permissions_not_granted">Required Permissions not granted</string>
    <string name="clear">Clear</string>
    <string name="clear_db">Clear DB</string>

</resources>
