<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.example.arcoreaugmentedimage.base.BaseCustomDialog.DialogListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_filled_white_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CustomTextViewBold"
            android:text="@string/choose"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:id="@+id/rl_camera_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:onClick="@{(v)->callback.onViewClick(v)}"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_camera"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:srcCompat="@drawable/image_camera" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomTextViewRegular"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/img_camera"
                android:text="@string/camera"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_gallery_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:onClick="@{(v)->callback.onViewClick(v)}"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_gallery"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:srcCompat="@drawable/image_gallery" />

            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewRegular"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/img_gallery"
                    android:text="@string/gallery"
                    android:textColor="@color/black" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CustomTextViewMedium"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:onClick="@{(v)->callback.onViewClick(v)}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

</layout>